# fix-collect-single

./: Dockerfile  Makefile  README.md  collect_single_shim  dispatch_executable_shim.sh  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: build_and_publish.yml  docker_build.yml
collect_single/: __init__.py  __main__.py  collect_and_sync.py  collect_single.py  core_client.py  job.py  metrics.yaml  model.py  post_collect.py  process.py
tests/: collect_and_sync_test.py  conftest.py  core_client_test.py
