
[options]
packages = find:
include_package_data = True
# we use __file__ --> move to pkg_resources.resource_stream
zip_safe = False

[options.package_data]
* = *.yaml

[flake8]
max-line-length = 120
exclude = .git,.tox,__pycache__,.idea,.pytest_cache,docs
application-import-names = collect-single tests
ignore = N818, W503, E203

[tool:pytest]
#collect_ignore = ['setup.py']
#log_format = %(asctime)s [%(levelname)s] %(message)s [%(name)s:%(lineno)d]
#log_date_format = %H:%M:%S
log_cli=true
log_level=info

[mypy]
ignore_missing_imports = True
